# CodeSorter

./: .libcst.codemod.yaml  .pre-commit-config.yaml  CHANGES.rst  README.rst  pyproject.toml
.github/workflows/: ci.yml  pre-commit_autoupdate.yml  prepare_release.yml  pypi.yml  scorecard.yml  tag_release.yml
codesorter/: __init__.py  cli.py  const.py  sort_code.py
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/code_overview/: sort_code.rst
docs/contributing/: pre_commit.rst
docs/usage/: barriers.rst
tests/: test_sort_code.py
tests/test_files/: barrier_input.py  barrier_output.py  class_global_dependency_output.py  comprehension_dependency_input.py  comprehension_dependency_output.py  keyword_arguments_input.py  keyword_arguments_output.py  name_rebinding_input.py  name_rebinding_output.py  order_sensitive_calls_input.py  order_sensitive_calls_output.py  runtime_call_dependency_input.py  runtime_call_dependency_output.py  underscore_ordering_input.py  underscore_ordering_output.py
