[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "tox-uv>=1.35.2",
  {include-group = "docs"},
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "type"}
]
docs = [
  "furo>=2024.8.6",
  "sphinx>=8.1.3",
  "sphinx-autodoc-typehints>=2.5.0"
]
lint = [
  "pre-commit>=4.6.0"
]
test = [
  "coverage>=7.14.1",
  "pytest>=9.0.3"
]
type = [
  "pyright>=1.1.410",
  {include-group = "test"}
]

[project]
authors = [{email = "lilspazjoekp@gmail.com", name = "Joel Payne"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = [
  "click>=8.4.1,<9",
  "libcst>=1.8.6,<2.0.0",
  "pathspec>=1.1.1"
]
description = "A Python codemod that sorts and organizes code in your files."
dynamic = ["version"]
keywords = ["codemod", "codesorter", "libcst", "sort"]
license = {file = "LICENSE.txt"}
maintainers = [
  {email = "lilspazjoekp@gmail.com", name = "Joel Payne"},
  {email = "bbzbryce@gmail.com", name = "Bryce Boe"}
]
name = "codesorter"
readme = "README.rst"
requires-python = ">=3.10"

[project.scripts]
codesorter = "codesorter:main"

[project.urls]
"Documentation" = "https://codesorter.readthedocs.io/"
"Issue Tracker" = "https://github.com/praw-dev/CodeSorter/issues"
"Source Code" = "https://github.com/praw-dev/CodeSorter"

[tool.coverage.report]
exclude_lines = [
  "@abstract",
  "@overload",
  "if TYPE_CHECKING:",
  "pragma: no cover"
]

[tool.hatch.version]
path = "codesorter/const.py"

[tool.pyright]
include = ["codesorter"]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
testpaths = ["tests"]

[tool.ruff]
exclude = ["examples", "tests/test_files"]
include = ["*.py"]
line-length = 120
preview = true

[tool.ruff.lint]
ignore = [
]
select = [
  "A", # flake8-builtins
  "ANN", # flake8-annotations
  "ARG", # flake8-unused-arguments
  "B", # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4", # flake8-comprehensions
  "D", # pydocstyle
  "DTZ", # flake8-datetimez
  "E", # pycodestyle
  "EM", # flake8-errmsg
  "ERA", # eradicate
  "EXE", # flake8-executable
  "F", # pyflakes
  "FA", # flake8-future-annotations
  "FBT", # flake8-boolean-trap
  "FIX", # flake8-fixme
  "FLY", # flynt
  "G", # flake8-logging-format
  "I", # isort
  "INP", # flake8-no-pep420
  "ISC", # flake8-implicit-str-concat
  "LOG", # flake8-logging
  "N", # pep8-naming
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL", # Pylint
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "Q", # flake8-quotes
  "RET", # flake8-return
  "RSE", # flake8-raise
  "RUF", # ruff-specific
  "S", # bandit
  "SIM", # flake8-simplify
  "SLF", # flake8-self
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TCH", # flake8-type-checking
  "TD", # flake8-todos
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W" # pycodestyle
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"codesorter/cli.py" = [
  "FBT001", # click commands receive boolean flags as positional kwargs
  "PLR0913", # click commands naturally take many parameters
  "PLR0917" # click commands naturally take many parameters
]
"codesorter/sort_code.py" = [
  "ARG002", # libcst visitor methods must accept original_node/updated_node
  "N802", # libcst visitor methods must use visit_CamelCase / leave_CamelCase
  "PLR0912", # libcst pattern matching produces unavoidable branching
  "PLR1702", # libcst pattern matching produces unavoidable nesting
  "PLW0717" # libcst extractall blocks are necessarily long try clauses
]
"docs/conf.py" = [
  "A001", # `copyright` is a Sphinx config global that shadows a builtin
  "D100", # the Sphinx config module needs no docstring
  "DTZ002", # the copyright year does not need a timezone
  "INP001" # docs/ is not an importable package
]
"tests/*.py" = [
  "ANN001", # pytest fixture params don't need annotations
  "ANN201", # test functions don't need return annotations
  "ANN202", # test helpers don't need return annotations
  "ARG002", # pytest passes fixtures (e.g. capsys) that may be unused
  "D100", # test modules don't need module docstrings
  "D101", # test classes don't need docstrings
  "D102", # test methods don't need docstrings
  "D103", # test functions don't need docstrings
  "D107", # test __init__ don't need docstrings
  "PLC0415", # tests intentionally import CLI lazily inside functions
  "PLC1901", # comparison-to-empty-string idiom is fine in tests
  "PLR6301", # pytest test methods on a class cannot be static
  "S101", # pytest tests use assert
  "SLF001"
]

[tool.tomlsort]
sort_inline_tables = true
sort_table_keys = true

[tool.tox]
envlist = ["py310", "py311", "py312", "py313", "py314", "pre-commit", "type"]
minversion = "4.22"

[tool.tox.env.docs]
base_python = ["py314"]
commands = [
  ["sphinx-build", "-W", "--keep-going", "-n", "docs/", "{env_tmp_dir}/html"]
]
dependency_groups = ["docs"]
description = "build docs with sphinx"
runner = "uv-venv-lock-runner"

[tool.tox.env.linkcheck]
base_python = ["py314"]
commands = [
  ["sphinx-build", "--keep-going", "-b", "linkcheck", "docs/", "{env_tmp_dir}/linkcheck"]
]
dependency_groups = ["docs"]
description = "check documentation for broken external links"
runner = "uv-venv-lock-runner"

[tool.tox.env.pre-commit]
commands = [["pre-commit", "run", "--all-files"]]
dependency_groups = ["lint"]
description = "run pre-commit on code base"
runner = "uv-venv-lock-runner"
set_env.SKIP = "no-commit-to-branch"

[tool.tox.env.type]
commands = [["pyright"]]
dependency_groups = ["type"]
description = "run type check on code base"
runner = "uv-venv-lock-runner"

[tool.tox.env_run_base]
commands = [
  ["coverage", "run", "--source", "codesorter", "--module", "pytest", "{posargs}"],
  ["coverage", "report", "-m"]
]
dependency_groups = ["test"]
description = "Run test under {base_python}"
runner = "uv-venv-lock-runner"
