[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "tox-uv>=1.35.2",
  {include-group = "docs"},
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "type"}
]
docs = [
  "furo>=2024.8.6",
  "sphinx>=8.1.3",
  "sphinx-autodoc-typehints>=2.5.0"
]
lint = [
  "pre-commit>=4.6.0"
]
test = [
  "coverage>=7.14.1",
  "pytest>=9.0.3"
]
type = [
  "pyright>=1.1.410",
  {include-group = "test"}
]

[project]
authors = [{email = "lilspazjoekp@gmail.com", name = "Joel Payne"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
  "Typing :: Typed"
]
dependencies = [
  "libcst>=1.8.6,<2.0.0",
  "pathspec>=1.1.1",
  "ruff>=0.1.2"
]
description = "A Python codemod that sorts and organizes code in your files."
dynamic = ["version"]
keywords = ["codemod", "codesorter", "libcst", "sort"]
license = {file = "LICENSE.txt"}
maintainers = [
  {email = "lilspazjoekp@gmail.com", name = "Joel Payne"},
  {email = "bbzbryce@gmail.com", name = "Bryce Boe"}
]
name = "codesorter"
readme = "README.rst"
requires-python = ">=3.10"

[project.scripts]
codesorter = "codesorter:main"

[project.urls]
"Change Log" = "https://codesorter.readthedocs.io/en/latest/package_info/change_log.html"
"Documentation" = "https://codesorter.readthedocs.io/"
"Issue Tracker" = "https://github.com/praw-dev/CodeSorter/issues"
"Source Code" = "https://github.com/praw-dev/CodeSorter"

[tool.coverage.report]
exclude_lines = [
  "@abstract",
  "@overload",
  "if TYPE_CHECKING:",
  "pragma: no cover"
]

[tool.hatch.version]
path = "codesorter/const.py"

[tool.pyright]
include = ["codesorter"]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
testpaths = ["tests"]

[tool.ruff]
exclude = ["examples", "tests/test_files"]
include = ["*.py"]
line-length = 120
preview = true

[tool.ruff.lint]
ignore = [
  "COM812", # trailing comma missing (conflicts with the formatter)
  "CPY001", # missing copyright notice
  "D203", # incorrect-blank-line-before-class (conflicts with D211)
  "D213", # multi-line-summary-second-line (conflicts with D212)
  "DOC201", # `return` not documented in docstring
  "E501", # line too long (handled by the formatter)
  "ISC001" # single-line implicit string concatenation (conflicts with the formatter)
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"codesorter/sort_code.py" = [
  "ARG002", # libcst visitor methods must accept original_node/updated_node
  "N802", # libcst visitor methods must use visit_CamelCase / leave_CamelCase
  "PLR0912", # libcst pattern matching produces unavoidable branching
  "PLR1702", # libcst pattern matching produces unavoidable nesting
  "PLW0717" # libcst extractall blocks are necessarily long try clauses
]
"docs/conf.py" = [
  "A001", # `copyright` is a Sphinx config global that shadows a builtin
  "D100", # the Sphinx config module needs no docstring
  "DTZ002", # the copyright year does not need a timezone
  "INP001" # docs/ is not an importable package
]
"tests/*.py" = [
  "ANN001", # pytest fixture params don't need annotations
  "ANN201", # test functions don't need return annotations
  "ARG002", # pytest passes fixtures (e.g. capsys) that may be unused
  "D103", # test functions don't need docstrings
  "PLC0415", # tests import the CLI lazily inside functions
  "PLC1901", # comparison-to-empty-string idiom is fine in tests
  "PLR0904", # a test class naturally accumulates many test methods
  "PLR6301", # pytest test methods on a class cannot be static
  "S101" # pytest tests use assert
]

[tool.tomlsort]
sort_inline_tables = true
sort_table_keys = true

[tool.tox]
envlist = ["py310", "py311", "py312", "py313", "py314", "docs", "pre-commit", "type"]
minversion = "4.22"

[tool.tox.env.docs]
base_python = ["py314"]
commands = [
  ["sphinx-build", "-W", "--keep-going", "-n", "docs/", "{env_tmp_dir}/html"]
]
dependency_groups = ["docs"]
description = "build docs with sphinx"
runner = "uv-venv-lock-runner"

[tool.tox.env.linkcheck]
base_python = ["py314"]
commands = [
  ["sphinx-build", "--keep-going", "-b", "linkcheck", "docs/", "{env_tmp_dir}/linkcheck"]
]
dependency_groups = ["docs"]
description = "check documentation for broken external links"
runner = "uv-venv-lock-runner"

[tool.tox.env.pre-commit]
commands = [["pre-commit", "run", "--all-files"]]
dependency_groups = ["lint"]
description = "run pre-commit on code base"
pass_env = ["SKIP"]
runner = "uv-venv-lock-runner"

[tool.tox.env.type]
commands = [["pyright"]]
dependency_groups = ["type"]
description = "run type check on code base"
runner = "uv-venv-lock-runner"

[tool.tox.env_run_base]
commands = [
  ["coverage", "run", "--source", "codesorter", "--module", "pytest", "{posargs}"],
  ["coverage", "report", "-m"]
]
dependency_groups = ["test"]
description = "Run test under {base_python}"
runner = "uv-venv-lock-runner"
